webpack 번들링과 소스맵

--- a/D_04/learn-webpack/package.json
+++ b/D_04/learn-webpack/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.1",
   "description": "webpack 학습",
   "scripts": {
-    "webpack": ""
+    "bundle": "webpack src/main.js dist/main.js",
+    "bundle:w": "npm run bundle -- -w",
+    "bundle:map": "npm run bundle:w -- -d",
+    "build": "webpack src/main.js dist/build.min.js -p"
   },
   "devDependencies": {
     "webpack": "^3.8.1"
