--- a/D_04/learn-webpack/package.json
+++ b/D_04/learn-webpack/package.json
@@ -21,6 +21,8 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "css-loader": "^0.28.7",
+    "node-sass": "^4.7.1",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "webpack": "^3.8.1"
   },
